# RAG

./: .gitignore  MANIFEST.in  README.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
ragchat/: __init__.py  cli.py
test_scripts/: test_directory.py  test_rag.py  test_simple.py
