[project]
name = "ragchat"
version = "0.1.0"
description = "Retrieval-Augmented Generation chat tool for querying information from documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.0.5",
    "ipython>=9.1.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.54",
    "langchain-xai>=0.2.3",
    "sentence-transformers>=4.1.0",
    "unstructured>=0.17.2",
    "python-dotenv>=1.1.0",
    "pypdf>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ragchat = "ragchat.cli:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "pytest>=7.4.3",
]
